# ufotofu

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bulk_pipe.rs  cursors.rs  example_bulk_count.rs  example_seventeen_times.rs  into_vec.rs  into_vec_fallible.rs  pipe.rs  scramble_consumer.rs  scramble_producer.rs
fuzz/fuzz_targets/consumer/: buffered.rs  bulk_buffered.rs  bulk_consume.rs  bulk_consume_full_slice.rs  bulk_scrambled.rs  consume_full_slice.rs  move_into_owned_slice.rs  move_into_slice.rs  scrambled.rs
fuzz/fuzz_targets/local_nb/: bulk_consume.rs  bulk_consume_full_slice.rs  bulk_overwrite_full_slice.rs  bulk_pipe.rs  bulk_pipe_into_slice.rs  bulk_pipe_into_slice_uninit.rs  bulk_produce.rs  consume_full_slice.rs  cursors.rs  into_vec.rs  into_vec_fallible.rs  overwrite_full_slice.rs  pipe.rs  pipe_into_slice.rs  pipe_into_slice_uninit.rs  scramble_consume_all.rs  scramble_consumer.rs  scramble_fill_all.rs  scramble_producer.rs  slices.rs
fuzz/fuzz_targets/producer/: buffered.rs  bulk_buffered.rs  bulk_overwrite_full_slice.rs  bulk_produce.rs  bulk_scrambled.rs  clone_from_owned_slice.rs  clone_from_slice.rs  equals.rs  equals_dbg.rs  overwrite_full_slice.rs  produce_item.rs  scrambled.rs
fuzz/fuzz_targets/queues/: fixed_bulk.rs  fixed_enqueue_dequeue.rs  static_bulk.rs  static_enqueue_dequeue.rs
fuzz/fuzz_targets/roundtrip/: array.rs  async_read_async_write.rs  binary_heap.rs  boxed_slice.rs  btree_map.rs  btree_set.rs  hash_map.rs  hash_set.rs  linked_list.rs  pipe.rs  vec.rs  vec_deque.rs
fuzz/fuzz_targets/sync/: bulk_consume.rs  bulk_consume_full_slice.rs  bulk_overwrite_full_slice.rs  bulk_pipe.rs  bulk_pipe_into_slice.rs  bulk_pipe_into_slice_uninit.rs  bulk_produce.rs  consume_full_slice.rs  cursors.rs  into_vec.rs  into_vec_fallible.rs  overwrite_full_slice.rs  pipe.rs  pipe_from_slice.rs  pipe_into_slice.rs  pipe_into_slice_uninit.rs  scramble_consume_all.rs  scramble_consumer.rs  scramble_fill_all.rs  scramble_producer.rs  slices.rs
fuzz/fuzz_targets/ufotofu/: bulk_consume.rs  bulk_consume_full_slice.rs  bulk_overwrite_full_slice.rs  bulk_pipe.rs  bulk_pipe_at_most.rs  bulk_produce.rs  compat.rs  compat_buf_read.rs  consume_full_slice.rs  consumer_bulk_scrambler_is_mostly_transparent.rs  consumer_invariant_is_transparent.rs  from_boxed_slice.rs  from_slice.rs  into_vec.rs  overwrite_full_slice.rs  pipe.rs  pipe_at_most.rs  producer_bulk_scrambler_is_transparent.rs  producer_invariant_is_transparent.rs  producer_merge.rs
src/: common.rs  lib.rs  local_nb.rs  nb.rs  sync.rs  sync_to_local_nb.rs
src/common/: common_macros.rs  consumer.rs  errors.rs  producer.rs  test_yielder.rs
src/common/consumer/: into_slice.rs  into_vec.rs  into_vec_fallible.rs  invariant.rs  invariant_noop.rs  macros.rs  scramble.rs  test_consumer.rs
src/common/producer/: from_boxed_slice.rs  from_slice.rs  invariant.rs  invariant_noop.rs  macros.rs  scramble.rs  test_producer.rs
src/local_nb/: consumer.rs  producer.rs  sync_to_local_nb.rs
src/local_nb/consumer/: cursor.rs  into_vec.rs  into_vec_fallible.rs  invariant.rs  invariant_noop.rs  pipe_from_slice.rs  scramble.rs  slice_consumer.rs  sync_to_local_nb.rs  test_consumer.rs
src/local_nb/producer/: cursor.rs  from_vec.rs  invariant.rs  invariant_noop.rs  pipe_into_slice.rs  scramble.rs  slice_producer.rs  sync_to_local_nb.rs  test_producer.rs
src/sync/: consumer.rs  producer.rs
src/sync/consumer/: cursor.rs  into_vec.rs  into_vec_fallible.rs  invariant.rs  invariant_noop.rs  pipe_from_slice.rs  (+3 more)
ufotofu/: Cargo.toml  README.md
ufotofu/src/: common.rs  common_macros.rs  consumer.rs  consumer_ext.rs  errors.rs  fixed_queue.rs  fuzz_testing_tutorial.rs  lib.rs  local_nb.rs  nb.rs  producer.rs  producer_ext.rs  queues.rs  sync.rs  test_yielder.rs
ufotofu/src/common/: consumer.rs  errors.rs  producer.rs
ufotofu/src/common/consumer/: into_slice.rs  into_vec.rs  into_vec_fallible.rs  invariant.rs  invariant_noop.rs  macros.rs  scramble.rs  test_consumer.rs
ufotofu/src/common/producer/: from_boxed_slice.rs  from_slice.rs  macros.rs  scramble.rs  test_producer.rs
ufotofu/src/consumer/: buffered.rs  bulk_buffered.rs  bulk_scrambled.rs  bulk_scrambler.rs  compat.rs  consumer_ext.rs  full.rs  into_slice.rs  into_vec.rs  into_vec_fallible.rs  invariant.rs  invariant_noop.rs  limit.rs  macros.rs  map_error.rs  map_final.rs  map_item.rs  move_into_slice.rs  scramble.rs  scrambled.rs  test_consumer.rs  writer.rs
ufotofu/src/consumer/compat/: array.rs  binary_heap.rs  btree_map.rs  btree_set.rs  hash_map.rs  hash_set.rs  linked_list.rs  slice.rs  vec.rs  vec_deque.rs  writer.rs
ufotofu/src/local_nb/: consumer.rs  producer.rs
ufotofu/src/local_nb/consumer/: sync_to_local_nb.rs
ufotofu/src/local_nb/producer/: read.rs  stream.rs  sync_to_local_nb.rs
ufotofu/src/producer/: array_producer.rs  buffered.rs  bulk_buffered.rs  bulk_scrambled.rs  bulk_scrambler.rs  clone_from_slice.rs  compat.rs  empty.rs  from_boxed_slice.rs  from_slice.rs  invariant.rs  invariant_noop.rs  iterator_as_producer.rs  limit.rs  macros.rs  map_error.rs  map_final.rs  map_item.rs  merge.rs  producer_ext.rs  reader.rs  scramble.rs  scrambled.rs  test_producer.rs  vec_producer.rs
ufotofu/src/producer/compat/: array.rs  binary_heap.rs  btree_map.rs  btree_set.rs  hash_map.rs  hash_set.rs  infinite_iterator_to_producer.rs  iterator_to_producer.rs  linked_list.rs  reader.rs  slice.rs  vec.rs  vec_deque.rs
ufotofu/src/queues/: contiguous.rs  fixed.rs  static_.rs
ufotofu/src/sync/: consumer.rs  producer.rs
ufotofu/src/sync/consumer/: write.rs
ufotofu/src/sync/producer/: iter.rs  read.rs
ufotofu_blocking/: Cargo.toml
ufotofu_blocking/src/: lib.rs
ufotofu_codec/: Cargo.toml
ufotofu_codec/src/: lib.rs  test_vector_generation.rs
ufotofu_codec_endian/: Cargo.toml
ufotofu_codec_endian/src/: lib.rs
ufotofu_macros/: Cargo.toml
ufotofu_macros/src/: lib.rs
ufotofu_queues/: Cargo.toml  README.md
ufotofu_queues/src/: fixed.rs  lib.rs  static_.rs
(+9 files in other folders)
