[package]
name = "ufotofu"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/worm-blossom/ufotofu"
description = "Abstractions for lazily consuming and producing sequences"

[features]
default = ["std"]

# Provide functionality that relies on the std library. Enabled by default.
std = []

# Provide functionality that relies on dynamic memory allocation.
alloc = []

# Provide implementations for scramblers which are used for fuzz testing.
dev = []

[dependencies]
arbitrary = { version = "1.0.2", features = ["derive"]}
either = "1.10.0"

# The `thiserror` crate does not currently support no_std so we're using
# a fork until it does. Depending on `thiserror-core` in this way means
# that the dependeny can easily be replaced in the future.
thiserror = { version = "1.0.50", package = "thiserror-core", default-features = false }

trait-variant = "0.1.1"

# TODO: Update this with crates.io path once published.
ufotofu_queues = { path = "../ufotofu_queues" }

wrapper = "0.1.1"

[dev-dependencies]
smol = "2.0.0"
