[package]
name = "ufotofu-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4.0", features = ["arbitrary-derive"] }
pollster = "0.4.0"
ufotofu = { path = "../ufotofu", features = ["dev"] }
either = "1.10.0"

[[bin]]
name = "example_bulk_count"
path = "fuzz_targets/example_bulk_count.rs"
test = false
doc = false
bench = false

[[bin]]
name = "example_seventeen_times"
path = "fuzz_targets/example_seventeen_times.rs"
test = false
doc = false
bench = false

[[bin]]
name = "pipe"
path = "fuzz_targets/pipe.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bulk_pipe"
path = "fuzz_targets/bulk_pipe.rs"
test = false
doc = false
bench = false

[[bin]]
name = "consumer_buffered"
path = "fuzz_targets/consumer/buffered.rs"
test = false
doc = false
bench = false

[[bin]]
name = "consumer_bulk_buffered"
path = "fuzz_targets/consumer/bulk_buffered.rs"
test = false
doc = false
bench = false

[[bin]]
name = "consumer_bulk_scrambled"
path = "fuzz_targets/consumer/bulk_scrambled.rs"
test = false
doc = false
bench = false

[[bin]]
name = "producer_buffered"
path = "fuzz_targets/producer/buffered.rs"
test = false
doc = false
bench = false

[[bin]]
name = "producer_bulk_buffered"
path = "fuzz_targets/producer/bulk_buffered.rs"
test = false
doc = false
bench = false

[[bin]]
name = "producer_bulk_scrambled"
path = "fuzz_targets/producer/bulk_scrambled.rs"
test = false
doc = false
bench = false

[lints]
workspace = true
