[package]
name = "ufotofu-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4.0", features = ["arbitrary-derive"] }
pollster = "0.4.0"
ufotofu = { path = "../ufotofu", features = ["dev"] }
either = "1.10.0"

[[bin]]
name = "consumer_buffered"
path = "fuzz_targets/consumer/buffered.rs"
test = false
doc = false
bench = false

[[bin]]
name = "consumer_bulk_buffered"
path = "fuzz_targets/consumer/bulk_buffered.rs"
test = false
doc = false
bench = false

[[bin]]
name = "consumer_bulk_consume_full_slice"
path = "fuzz_targets/consumer/bulk_consume_full_slice.rs"
test = false
doc = false
bench = false

[[bin]]
name = "consumer_bulk_consume"
path = "fuzz_targets/consumer/bulk_consume.rs"
test = false
doc = false
bench = false

[[bin]]
name = "consumer_bulk_scrambled"
path = "fuzz_targets/consumer/bulk_scrambled.rs"
test = false
doc = false
bench = false

[[bin]]
name = "consumer_consume_full_slice"
path = "fuzz_targets/consumer/consume_full_slice.rs"
test = false
doc = false
bench = false

[[bin]]
name = "consumer_move_into_slice"
path = "fuzz_targets/consumer/move_into_slice.rs"
test = false
doc = false
bench = false

[[bin]]
name = "consumer_move_into_owned_slice"
path = "fuzz_targets/consumer/move_into_owned_slice.rs"
test = false
doc = false
bench = false

[[bin]]
name = "consumer_scrambled"
path = "fuzz_targets/consumer/scrambled.rs"
test = false
doc = false
bench = false

[[bin]]
name = "producer_buffered"
path = "fuzz_targets/producer/buffered.rs"
test = false
doc = false
bench = false

[[bin]]
name = "producer_bulk_buffered"
path = "fuzz_targets/producer/bulk_buffered.rs"
test = false
doc = false
bench = false

[[bin]]
name = "producer_bulk_overwrite_full_slice"
path = "fuzz_targets/producer/bulk_overwrite_full_slice.rs"
test = false
doc = false
bench = false

[[bin]]
name = "producer_bulk_produce"
path = "fuzz_targets/producer/bulk_produce.rs"
test = false
doc = false
bench = false

[[bin]]
name = "producer_bulk_scrambled"
path = "fuzz_targets/producer/bulk_scrambled.rs"
test = false
doc = false
bench = false

[[bin]]
name = "producer_clone_from_owned_slice"
path = "fuzz_targets/producer/clone_from_owned_slice.rs"
test = false
doc = false
bench = false

[[bin]]
name = "producer_clone_from_slice"
path = "fuzz_targets/producer/clone_from_slice.rs"
test = false
doc = false
bench = false

[[bin]]
name = "producer_equals"
path = "fuzz_targets/producer/equals.rs"
test = false
doc = false
bench = false

[[bin]]
name = "producer_equals_dbg"
path = "fuzz_targets/producer/equals_dbg.rs"
test = false
doc = false
bench = false

[[bin]]
name = "producer_overwrite_full_slice"
path = "fuzz_targets/producer/overwrite_full_slice.rs"
test = false
doc = false
bench = false

[[bin]]
name = "producer_produce_item"
path = "fuzz_targets/producer/produce_item.rs"
test = false
doc = false
bench = false

[[bin]]
name = "producer_scrambled"
path = "fuzz_targets/producer/scrambled.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip_array"
path = "fuzz_targets/roundtrip/array.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip_binary_heap"
path = "fuzz_targets/roundtrip/binary_heap.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip_boxed_slice"
path = "fuzz_targets/roundtrip/boxed_slice.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip_btree_map"
path = "fuzz_targets/roundtrip/btree_map.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip_btree_set"
path = "fuzz_targets/roundtrip/btree_set.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip_bulk_pipe"
path = "fuzz_targets/roundtrip/bulk_pipe.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip_hash_map"
path = "fuzz_targets/roundtrip/hash_map.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip_hash_set"
path = "fuzz_targets/roundtrip/hash_set.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip_linked_list"
path = "fuzz_targets/roundtrip/linked_list.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip_pipe"
path = "fuzz_targets/roundtrip/pipe.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip_vec"
path = "fuzz_targets/roundtrip/vec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip_vec_deque"
path = "fuzz_targets/roundtrip/vec_deque.rs"
test = false
doc = false
bench = false

[[bin]]
name = "example_bulk_count"
path = "fuzz_targets/example_bulk_count.rs"
test = false
doc = false
bench = false

[[bin]]
name = "example_seventeen_times"
path = "fuzz_targets/example_seventeen_times.rs"
test = false
doc = false
bench = false

[lints]
workspace = true
