[package]
name = "ufotofu"
version = "0.8.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/worm-blossom/ufotofu"
description = "Abstractions for lazily consuming and producing sequences"
exclude = ["fuzz/*", ".github/workflows/rust.yml"]

[features]

default = ["std"]

# Provide functionality that relies on the std library. Enabled by default.
std = ["alloc"]

# Provide functionality that relies on dynamic memory allocation.
alloc = []

# Provide implementations for development helpers.
dev = ["dep:arbitrary"]

# Provide adaptors for interoperability with other async reader and writer crates.
compat = ["dep:smol"]

[dependencies]
arbitrary = { version = "1.0.2", features = ["derive"], optional = true }
either = "1.10.0"
pin-project = "1"
smol = { version = "2.0.2", optional = true }
ufotofu_queues = { path = "../ufotofu_queues", version = "0.7.0" }
futures = "0.3.31"
reusable-box-future = "0.2.0"

[dev-dependencies]
pollster = "0.4.0"

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true

[lints]
workspace = true
