[package]
name = "ufotofu"
version = "0.8.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/worm-blossom/ufotofu"
description = "Abstractions for lazily consuming and producing sequences"
exclude = ["fuzz/*", ".github/workflows/rust.yml"]

[features]

default = ["std"]

# Provide functionality that relies on the std library. Enabled by default.
std = ["alloc"]

# Provide functionality that relies on dynamic memory allocation.
alloc = []

# Provide development helpers.
dev = ["std", "dep:arbitrary", "dep:derive_builder"]

# Provide adaptors for interoperability with other async reader and writer crates.
# compat = ["dep:smol"]

[dependencies]
either = "1.10.0"
arbitrary = { version = "1.0.2", features = ["derive"], optional = true }
smol = { version = "2.0.2", optional = true }
derive_builder = { version = "0.20.2", features = ["alloc"], optional = true }
# futures = "0.3.31"

[dev-dependencies]
pollster = "0.4.0"

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true

[lints]
workspace = true
