[package]
name = "ufotofu"
version = "0.8.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/worm-blossom/ufotofu"
description = "Abstractions for lazily consuming and producing sequences"
exclude = ["fuzz/*", ".github/workflows/rust.yml"]

[features]

default = ["std"]

# Provide functionality that relies on the std library. Enabled by default.
std = ["alloc"]

# Provide functionality that relies on dynamic memory allocation.
alloc = []

# Provide development helpers.
dev = ["std", "dep:arbitrary", "dep:derive_builder", "dep:libfuzzer-sys"]

# Provide adaptors for interoperability with other async reader and writer crates.
# compat = ["dep:smol"]

[dependencies]
ufotofu_macros = { path = "../ufotofu_macros", version = "0.1.0" }
either = "1.10.0"
arbitrary = { version = "1.0.2", features = ["derive"], optional = true }
smol = { version = "2.0.2", optional = true }
derive_builder = { version = "0.20.2", features = ["alloc"], optional = true }
# futures = "0.3.31"

# We only depend on this so that our doc examples build.
libfuzzer-sys = { version = "0.4.0", optional = true }

[dev-dependencies]
pollster = "0.4.0"

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true

[lints]
workspace = true
